[package]
name = "redirect"
version = "0.1.0"
authors = ["Luxko <luxko@qq.com>"]
license = "Apache-2.0"
keywords = ["graphics"]
categories = ["rendering::graphics-api"]
description = "A light weight, type safe wrapper around the DirectX12 API"

[dependencies]
winapi = "0.2"
d3d12-sys = "0.2"
dxguid-sys = "0.2"
dxgi-sys = "0.2"
d3dcompiler-sys = "0.2"
bitflags = "0.9"
smallvec = "0.4"

[[example]]
name = "initialize"
path = "examples/initialize.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[dev-dependencies]
winit = "0.6"
