[package]
name = "redirect"
version = "0.3.0"
authors = ["Luxko <luxko@qq.com>"]
license = "Apache-2.0"
keywords = ["graphics"]
categories = ["rendering::graphics-api"]
documentation = "https://daseinphaos.github.io/doc/redirect/"
repository = "https://github.com/daseinphaos/redirect"
description = "A light weight, type safe wrapper around the DirectX12 API"

[dependencies]
winapi = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
d3d12-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
d3dcompiler-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
dxgi-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
dxguid-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
kernel32-sys = { git = "https://github.com/msiglreith/winapi-rs.git", branch = "gfx" }
bitflags = "1.0"
smallvec = "0.4"

[[example]]
name = "initialize"
path = "examples/initialize.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[dev-dependencies]
winit = "0.6"
